added useage message and args length check